deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-api
  namespace: camping
spec:
  selector:
    matchLabels:
      app: pricing-api
  template:
    metadata:
      labels:
        app: pricing-api
    spec:
      containers:
      - name: pricing-api
        image: camping-pricing:v0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
