deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-api-service
  namespace: camping
spec:
  selector:
    app: pricing-api
  ports:
  - port: 80
    targetPort: 80
