deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pricing-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    name: pricing-api-ingress
spec:
  rules:
  - host: api.camping-galaxy.com
    http:
      paths:
      - pathType: Prefix
        path: "/accounting(/|$)(.*)"
        backend:
          service:
            name: pricing-api-service
            port: 
              number: 80




# http://api.camping-galaxy.com/accounting/
